fixing tabs on mobile

--- a/index.css
+++ b/index.css
@@ -49,9 +49,20 @@ html {
 
     .tab {
         position: absolute;
+        top:0;
         width:100%;
-        transform: translateX(-50%);
-        font-size: 10px;
+        margin: auto;
+        font-size: 15px;
+    }
+    .tab button {
+        background-color: inherit;
+        color: white;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        padding: 14px 16px;
+        margin: auto;
+        transition: 0.3s;
     }
 }
 
@@ -134,6 +145,18 @@ html {
         transform: translateX(-50%);
         font-size: 20px;
     }
+
+    .tab button {
+        background-color: inherit;
+        color: white;
+        float: left;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        padding: 14px 16px;
+        margin: 10px 16px;
+        transition: 0.3s;
+    }
 }
 
 th, td{
@@ -144,17 +167,7 @@ th, td{
 
 
 /* Style the buttons that are used to open the tab content */
-.tab button {
-    background-color: inherit;
-    color: white;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 14px 16px;
-    margin: 10px 16px;
-    transition: 0.3s;
-}
+
 
 /* Change background color of buttons on hover */
 .tab button:hover {
